--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "license": "proprietary",
     "require": {
         "php": "^7.0.8",
+        "fzaninotto/faker": "^1.7",
         "sensio/framework-extra-bundle": "^5.0",
         "symfony/console": "^3.3",
         "symfony/css-selector": "^3.3",
